fix vulnerabilities and dependencies conflict

--- a/deskover-dashboard-website/package.json
+++ b/deskover-dashboard-website/package.json
@@ -34,6 +34,7 @@
     "@ng-bootstrap/ng-bootstrap": "^11.0.0",
     "@ngrx/store": "13.0.2",
     "angular-datatables": "^13.0.1",
+    "autoprefixer": "10.4.5",
     "bootstrap": "^4.6.0",
     "core-js": "3.8.0",
     "datatables.net": "^1.11.3",
@@ -45,6 +46,7 @@
     "luxon": "2.3.0",
     "ngx-pagination": "^6.0.1",
     "ngx-toastr": "14.2.1",
+    "npm-check-updates": "^14.0.1",
     "process": "0.11.10",
     "rxjs": "6.6.7",
     "tslib": "2.0.3",
