Update dependences (fix vulnerabilities)

--- a/deskover-dashboard-website/package.json
+++ b/deskover-dashboard-website/package.json
@@ -46,9 +46,9 @@
     "gatekeeper-client-sdk": "^0.3.0",
     "jquery": "^3.6.0",
     "luxon": "2.3.0",
+    "ngx-bootstrap": "^8.0.0",
     "ngx-pagination": "^6.0.1",
     "ngx-toastr": "14.2.1",
-    "npm-check-updates": "^14.0.1",
     "process": "0.11.10",
     "rxjs": "6.6.7",
     "tslib": "2.0.3",
